@@ -28,7 +28,10 @@ import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.logging.Logger;
 import java.util.stream.Collectors;
+
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -54,108 +57,175 @@ public class MyBookService {
     @Autowired
     PackageReadRepository PRrepo;
 
+    public ResponseEntity<ResultDto<?>> createMybook(int orderId, int userDetailId) {
+        try {
+            // Lấy UserDetail từ userDetailId
+            UserDetail userDetail = UDrepo.findById(userDetailId)
+                    .orElseThrow(() -> new IllegalArgumentException("UserDetail not found"));
 
-   public ResponseEntity<ResultDto<?>> createMybook(int orderId, int userDetailId) {
-    try {
-        // Lấy UserDetail từ userDetailId
-        UserDetail userDetail = UDrepo.findById(userDetailId)
-                .orElseThrow(() -> new IllegalArgumentException("UserDetail not found"));
+            // Lấy Order từ orderId
+            Order order = orderrepo.findById(orderId)
+                    .orElseThrow(() -> new IllegalArgumentException("Order not found"));
 
-        // Lấy Order từ orderId
-        Order order = orderrepo.findById(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("Order not found"));
+            // Lặp qua từng OrderDetail trong Order và xử lý từng sách
+            for (OrderDetail orderDetail : order.getOrderDetails()) {
+                Book book = orderDetail.getBook();
 
-        // Lặp qua từng OrderDetail trong Order và xử lý từng sách
-        for (OrderDetail orderDetail : order.getOrderDetails()) {
-            Book book = orderDetail.getBook();
+                // Lấy packageReadId từ OrderDetail
+                Integer packageReadId = orderDetail.getPackId();
+                System.out.println("heloooooo" + packageReadId);
 
-            // Lấy packageReadId từ OrderDetail
-            Integer packageReadId = orderDetail.getPackId();
-            System.out.println("heloooooo"+packageReadId);
-           
-            if (packageReadId != null && packageReadId > 0) {
-                // Truy xuất PackageRead từ packageReadId
-                PackageRead packageRead = PRrepo.findById(packageReadId).get();
-                       
+                if (packageReadId != null && packageReadId > 0) {
+                    // Truy xuất PackageRead từ packageReadId
+                    PackageRead packageRead = PRrepo.findById(packageReadId).get();
 
-                // Tính toán expired_date
-                LocalDateTime createAt = LocalDateTime.now();
-               LocalDateTime expiredDate = createAt.plusDays(packageRead.getDayQuantity());
-                CurrentPage currentPage = new CurrentPage();
-            currentPage.setCurrenPageIndex(0);
-            currentPage.setImagePageData(book.getFilePdf().getFile_data()); // Assuming this field exists
-            CPrepo.save(currentPage);
+                    // Tính toán expired_date
+                    LocalDateTime createAt = LocalDateTime.now();
+                    LocalDateTime expiredDate = createAt.plusDays(packageRead.getDayQuantity());
+                    CurrentPage currentPage = new CurrentPage();
+                    currentPage.setCurrenPageIndex(0);
+                    currentPage.setImagePageData(book.getFilePdf().getFile_data()); // Assuming this field exists
+                    CPrepo.save(currentPage);
 
-            // Tạo Mybook mới và lưu vào cơ sở dữ liệu
-            Mybook mybook = Mybook.builder()
-                    .userDetail(userDetail)
-                    .book(book)
-                    .currentpage(currentPage)
-                    .createAt(LocalDateTime.now())
-                    .ExpiredDate(expiredDate)
-                    .build();
+                    // Tạo Mybook mới và lưu vào cơ sở dữ liệu
+                    Mybook mybook = Mybook.builder()
+                            .userDetail(userDetail)
+                            .book(book)
+                            .currentpage(currentPage)
+                            .createAt(LocalDateTime.now())
+                            .ExpiredDate(expiredDate)
+                            .build();
 
-            MBrepo.save(mybook);
-            }else{
-                LocalDateTime expiredDate =null;
-                 CurrentPage currentPage = new CurrentPage();
-            currentPage.setCurrenPageIndex(0);
-            currentPage.setImagePageData(book.getFilePdf().getFile_data()); // Assuming this field exists
-            CPrepo.save(currentPage);
+                    MBrepo.save(mybook);
+                } else {
+                    LocalDateTime expiredDate = null;
+                    CurrentPage currentPage = new CurrentPage();
+                    currentPage.setCurrenPageIndex(0);
+                    currentPage.setImagePageData(book.getFilePdf().getFile_data()); // Assuming this field exists
+                    CPrepo.save(currentPage);
 
-            // Tạo Mybook mới và lưu vào cơ sở dữ liệu
-            Mybook mybook = Mybook.builder()
-                    .userDetail(userDetail)
-                    .book(book)
-                    .currentpage(currentPage)
-                    .createAt(LocalDateTime.now())
-                    .ExpiredDate(expiredDate)
-                    .build();
+                    // Tạo Mybook mới và lưu vào cơ sở dữ liệu
+                    Mybook mybook = Mybook.builder()
+                            .userDetail(userDetail)
+                            .book(book)
+                            .currentpage(currentPage)
+                            .createAt(LocalDateTime.now())
+                            .ExpiredDate(expiredDate)
+                            .build();
 
-            MBrepo.save(mybook);
+                    MBrepo.save(mybook);
+                }
+
+                // // Tạo mới CurrentPage với current_page_index = 0
+                // CurrentPage currentPage = new CurrentPage();
+                // currentPage.setCurrenPageIndex(0);
+                // currentPage.setImagePageData(book.getFilePdf().getFile_data()); // Assuming
+                // this field exists
+                // CPrepo.save(currentPage);
+                //
+                // // Tạo Mybook mới và lưu vào cơ sở dữ liệu
+                // Mybook mybook = Mybook.builder()
+                // .userDetail(userDetail)
+                // .book(book)
+                // .currentpage(currentPage)
+                // .createAt(LocalDateTime.now())
+                // .ExpiredDate(expiredDate)
+                // .build();
+                //
+                // MBrepo.save(mybook);
             }
 
-//            // Tạo mới CurrentPage với current_page_index = 0
-//            CurrentPage currentPage = new CurrentPage();
-//            currentPage.setCurrenPageIndex(0);
-//            currentPage.setImagePageData(book.getFilePdf().getFile_data()); // Assuming this field exists
-//            CPrepo.save(currentPage);
-//
-//            // Tạo Mybook mới và lưu vào cơ sở dữ liệu
-//            Mybook mybook = Mybook.builder()
-//                    .userDetail(userDetail)
-//                    .book(book)
-//                    .currentpage(currentPage)
-//                    .createAt(LocalDateTime.now())
-//                    .ExpiredDate(expiredDate)
-//                    .build();
-//
-//            MBrepo.save(mybook);
+            ResultDto<?> response = ResultDto.builder()
+                    .status(true)
+                    .message("Create successfully")
+                    .build();
+            return new ResponseEntity<>(response, HttpStatus.OK);
+
+        } catch (IllegalArgumentException e) {
+            ResultDto<?> response = ResultDto.builder()
+                    .status(false)
+                    .message(e.getMessage())
+                    .build();
+            return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
+        } catch (Exception e) {
+            ResultDto<?> response = ResultDto.builder()
+                    .status(false)
+                    .message("An unexpected error occurred: " + e.getMessage())
+                    .build();
+            return new ResponseEntity<>(response, HttpStatus.INTERNAL_SERVER_ERROR);
         }
-
-        ResultDto<?> response = ResultDto.builder()
-                .status(true)
-                .message("Create successfully")
-                .build();
-        return new ResponseEntity<>(response, HttpStatus.OK);
-
-    } catch (IllegalArgumentException e) {
-        ResultDto<?> response = ResultDto.builder()
-                .status(false)
-                .message(e.getMessage())
-                .build();
-        return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
-    } catch (Exception e) {
-        ResultDto<?> response = ResultDto.builder()
-                .status(false)
-                .message("An unexpected error occurred: " + e.getMessage())
-                .build();
-        return new ResponseEntity<>(response, HttpStatus.INTERNAL_SERVER_ERROR);
     }
-}
 
+    // show list mybook
+    // public ResponseEntity<ResultDto<?>> ShowMybooklist(int userdetailid) {
+    // try {
+    // Optional<UserDetail> optionalUD = UDrepo.findById(userdetailid);
+    // if (optionalUD.isEmpty()) {
+    // return ResponseEntity.status(HttpStatus.NOT_FOUND)
+    // .body(ResultDto.builder()
+    // .status(false)
+    // .message("UserDetail not found")
+    // .build());
+    // }
+    // List<Mybook> mybooks = MBrepo.findByUserDetailId(userdetailid);
 
-    //show list mybook
+    // List<MBUserRes> mbUserResList = mybooks.stream()
+    // .map(mybook -> {
+    // MBUserRes mbUserRes = new MBUserRes();
+    // mbUserRes.setBookname(mybook.getBook().getName());
+    // mbUserRes.setBookid(mybook.getBook().getId());
+    // mbUserRes.setMybookid(mybook.getId()); // Assuming one author per book for
+    // simplicity
+    // mbUserRes.setExpiredDate(mybook.getExpiredDate());
+    // Long daysDif = ChronoUnit.DAYS.between(LocalDateTime.now(),
+    // mybook.getExpiredDate());
+    // if (mybook.getExpiredDate() == null) {
+    // //mua
+    // mbUserRes.setDays(0);
+    // mbUserRes.setStatus(0);
+    // } else if (daysDif > 3) {
+    // //con han
+    // mbUserRes.setDays((int) Math.abs(daysDif));
+    // mbUserRes.setStatus(1);
+    // } else if (daysDif < 0) {
+    // //het han
+    // mbUserRes.setDays(0);
+    // mbUserRes.setStatus(3);
+    // } else {
+    // //sap het han
+    // mbUserRes.setDays((int) Math.abs(daysDif));
+    // mbUserRes.setStatus(2);
+    // }
+
+    // // Lấy hình ảnh từ danh sách imagebook có cover = 1
+    // byte[] coverImage = mybook.getBook().getFilePdf().getImagesbook().stream()
+    // .filter(c -> c.isCover())
+    // .map(c -> c.getImage_data())
+    // .findFirst()
+    // .orElse(null);
+
+    // mbUserRes.setFileImage(coverImage);
+
+    // return mbUserRes;
+    // })
+    // .toList();
+
+    // ResultDto<List<MBUserRes>> response = ResultDto.<List<MBUserRes>>builder()
+    // .status(true)
+    // .message("Success")
+    // .model(mbUserResList)
+    // .build();
+    // return new ResponseEntity<>(response, HttpStatus.OK);
+
+    // } catch (Exception e) {
+    // ResultDto<?> response = ResultDto.builder()
+    // .status(false)
+    // .message("Failed to fetch Mybooks: " + e.getMessage())
+    // .build();
+    // return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+    // }
+    // }
+
     public ResponseEntity<ResultDto<?>> ShowMybooklist(int userdetailid) {
         try {
             Optional<UserDetail> optionalUD = UDrepo.findById(userdetailid);
@@ -173,31 +243,30 @@ public class MyBookService {
                         MBUserRes mbUserRes = new MBUserRes();
                         mbUserRes.setBookname(mybook.getBook().getName());
                         mbUserRes.setBookid(mybook.getBook().getId());
-                        mbUserRes.setMybookid(mybook.getId()); // Assuming one author per book for simplicity
+                        mbUserRes.setMybookid(mybook.getId());
                         mbUserRes.setExpiredDate(mybook.getExpiredDate());
-                        Long daysDif = ChronoUnit.DAYS.between(LocalDateTime.now(), mybook.getExpiredDate());
+
+                        Long daysDif = mybook.getExpiredDate() != null
+                                ? ChronoUnit.DAYS.between(LocalDateTime.now(), mybook.getExpiredDate())
+                                : null;
+
                         if (mybook.getExpiredDate() == null) {
-                            //mua
                             mbUserRes.setDays(0);
                             mbUserRes.setStatus(0);
                         } else if (daysDif > 3) {
-                            //con han
                             mbUserRes.setDays((int) Math.abs(daysDif));
                             mbUserRes.setStatus(1);
                         } else if (daysDif < 0) {
-                            //het han
                             mbUserRes.setDays(0);
                             mbUserRes.setStatus(3);
                         } else {
-                            //sap het han
                             mbUserRes.setDays((int) Math.abs(daysDif));
                             mbUserRes.setStatus(2);
                         }
 
-                        // Lấy hình ảnh từ danh sách imagebook có cover = 1
                         byte[] coverImage = mybook.getBook().getFilePdf().getImagesbook().stream()
                                 .filter(c -> c.isCover())
-                                .map(c -> c.getImage_data())
+                                .map(ImagesBook::getImage_data)
                                 .findFirst()
                                 .orElse(null);
 
@@ -205,7 +274,7 @@ public class MyBookService {
 
                         return mbUserRes;
                     })
-                    .toList();
+                    .collect(Collectors.toList());
 
             ResultDto<List<MBUserRes>> response = ResultDto.<List<MBUserRes>>builder()
                     .status(true)
@@ -215,11 +284,12 @@ public class MyBookService {
             return new ResponseEntity<>(response, HttpStatus.OK);
 
         } catch (Exception e) {
+
             ResultDto<?> response = ResultDto.builder()
                     .status(false)
                     .message("Failed to fetch Mybooks: " + e.getMessage())
                     .build();
-            return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+            return new ResponseEntity<>(response, HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
 }
